--- a/.github/workflows/sycl_detect_changes.yml
+++ b/.github/workflows/sycl_detect_changes.yml
@@ -52,6 +52,8 @@ jobs:
               # devops/* contains config files, including drivers versions.
               # Allow them to be tested in pre-commit.
               - devops/*/**
+            drivers:
+              - devops/dependencies.json
 
       - name: Set output
         id: result
@@ -64,6 +66,6 @@ jobs:
               return '${{ steps.changes.outputs.changes }}';
             }
             // Treat everything as changed for huge PRs.
-            return ["llvm", "llvm_spirv", "clang", "sycl_fusion", "xptifw", "libclc", "sycl", "ci"];
+            return ["llvm", "llvm_spirv", "clang", "sycl_fusion", "xptifw", "libclc", "sycl", "ci", "drivers"];
 
       - run: echo '${{ steps.result.outputs.result }}'
