--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -251,48 +251,23 @@ jobs:
       fail-fast: false
       matrix:
         include: ${{ fromJSON(inputs.cts_matrix) }}
-    name: ${{ matrix.name }}
-    runs-on: ${{ matrix.runs-on }}
-    env: ${{ matrix.env }}
-    container:
+    uses: ./.github/workflows/sycl_linux_run_tests.yml
+    with:
+      name: ${{ matrix.name }}
+      runner: ${{ toJSON(matrix.runs-on) }}
       image: ${{ matrix.image }}
-      options: ${{ matrix.container_options }}
-    steps:
-    - name: Reset GPU
-      if: ${{ contains(matrix.config, 'gen12') }}
-      run: |
-        sudo mount -t debugfs none /sys/kernel/debug
-        sudo bash -c 'echo 1 > /sys/kernel/debug/dri/0/i915_wedged'
-    - uses: actions/checkout@v3
-      with:
-        sparse-checkout: |
-          devops/actions
-    - name: Register cleanup after job is finished
-      uses: ./devops/actions/cleanup
-    - name: Install drivers
-      if: env.compute_runtime_tag != ''
-      run: |
-        if [ -e /opt/install_drivers.sh ]; then
-          # TODO pack this script into container
-          wget raw.githubusercontent.com/intel/llvm/${{ github.sha }}/devops/scripts/get_release.py
-          sudo mv get_release.py /opt/
-          sudo -E /opt/install_drivers.sh --all
-        fi
-    # FIXME cached_checkout fails here, but works everywhere else
-    # TODO: figure out if we remove this action
-    - uses: actions/checkout@v3
-      with:
-        path: llvm
-    # TODO should this action be packed into container as well?
-    - uses: ./llvm/devops/actions/khronos_cts_test
-      name: Run Khronos SYCL CTS
-      with:
-        test_ref: ${{ inputs.cts_ref }}
-        sycl_artifact: sycl_linux_${{ inputs.build_artifact_suffix }}
-        sycl_archive: ${{ inputs.artifact_archive_name }}
-        decompress_command: ${{ inputs.artifact_decompress_command }}
-        sycl_device_filter: ${{ matrix.sycl_device_filter }}
-        cmake_args: '${{ matrix.cmake_args }} ${{ inputs.cts_cmake_extra_args }}'
+      image_options: ${{ matrix.container_options }}
+      extra_cmake_args: '${{ matrix.cmake_args }} ${{ inputs.cts_cmake_extra_args }}'
+      target_devices: ${{ matrix.sycl_device_filter }}
+      ref: ${{ inputs.build_ref || github.sha }}
+      merge_ref: ${{ inputs.merge_ref }}
+      reset_gpu: ${{ contains(matrix.runs-on, 'gen12') && contains(matrix.runs-on, 'Linux') }}
+
+      sycl_toolchain_artifact: sycl_linux_${{ inputs.build_artifact_suffix }}
+      sycl_toolchain_archive: ${{ inputs.artifact_archive_name }}
+      sycl_toolchain_decompress_command: ${{ inputs.artifact_decompress_command }}
+
+      env: ${{ toJSON(matrix.env) }}
 
   aws-stop:
     name: Stop AWS
