--- a/.github/workflows/sycl_post_commit.yml
+++ b/.github/workflows/sycl_post_commit.yml
@@ -14,7 +14,8 @@ jobs:
     if: github.repository == 'intel/llvm'
     uses: ./.github/workflows/sycl_gen_test_matrix.yml
     with:
-      lts_config: "l0_gen12;win_l0_gen12"
+      # lts_config: "l0_gen12;win_l0_gen12"
+      lts_config: ""
       cts_config: "cuda"
   linux_self_prod:
     name: Linux (Self build + shared libraries + no-assertions)
@@ -35,15 +36,15 @@ jobs:
       lts_aws_matrix: ${{ needs.test_matrix.outputs.lts_aws_matrix }}
       merge_ref: ''
 
-  windows_default:
-    name: Windows
-    needs: test_matrix
-    if: github.repository == 'intel/llvm'
-    uses: ./.github/workflows/sycl_windows_build_and_test.yml
-    with:
-      lts_matrix: ${{ needs.test_matrix.outputs.lts_wn_matrix }}
+  # windows_default:
+  #   name: Windows
+  #   needs: test_matrix
+  #   if: github.repository == 'intel/llvm'
+  #   uses: ./.github/workflows/sycl_windows_build_and_test.yml
+  #   with:
+  #     lts_matrix: ${{ needs.test_matrix.outputs.lts_wn_matrix }}
 
-  macos_default:
-    name: macOS
-    if: github.repository == 'intel/llvm'
-    uses: ./.github/workflows/sycl_macos_build_and_test.yml
+  # macos_default:
+  #   name: macOS
+  #   if: github.repository == 'intel/llvm'
+  #   uses: ./.github/workflows/sycl_macos_build_and_test.yml
