--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -21,3 +21,9 @@ jobs:
     with:
       mode: stop
       runs-on-list: '[{"runs-on":"aws-cuda_${{ github.run_id }}-${{ github.run_attempt }}","aws-ami":"ami-01cb0573cb039ab24","aws-type":["g5.2xlarge","g5.4xlarge"],"aws-disk":"/dev/sda1:64","aws-spot":"false"}]'
+
+  print:
+    runs-on: ubuntu-20.04
+    needs: aws_start
+    steps:
+      - run: echo ${{ needs.aws_start.outputs.label }}
