--- a/devops/actions/aws-ec2/action.yml
+++ b/devops/actions/aws-ec2/action.yml
@@ -47,7 +47,6 @@ inputs:
     # aws-disk:     AWS EC2 instance AMI specific disk device path and size in GB (8 by default). Makes sense only for start mode. Default "/dev/sda1:16".
     # aws-timebomp: AWS EC2 instance maximum live time. Makes sense only for start mode. Default "1h".
     # one-job:      Will terminate AWS EC2 instance after one job (not waiting for stop job) saving money. Makes sense only for start mode. Default true.
-
   mode:
     description: "Mode of operation: start or stop"
     required: false
@@ -69,6 +68,12 @@ inputs:
     description: "AWS EC2 region"
     required: false
     default: "us-east-1" # North Virginia
+
+outputs:
+  label:
+    description: |
+      In start mode, return 'runs-on' value from the input runs-on-list. We only
+      support scenario where a single runner is created.
 
 runs:
   using: node16
