--- a/.github/workflows/sycl_post_commit.yml
+++ b/.github/workflows/sycl_post_commit.yml
@@ -30,19 +30,20 @@ jobs:
       cc: clang
       cxx: clang++
       lts_matrix: ${{ needs.test_matrix.outputs.lts_lx_matrix }}
-      cts_matrix: ${{ needs.test_matrix.outputs.cts_matrix }}
-      lts_aws_matrix: ${{ needs.test_matrix.outputs.lts_aws_matrix }}
+      # cts_matrix: ${{ needs.test_matrix.outputs.cts_matrix }}
+      # lts_aws_matrix: ${{ needs.test_matrix.outputs.lts_aws_matrix }}
       merge_ref: ''
+      changes: '[]'
 
-  windows_default:
-    name: Windows
-    needs: test_matrix
-    if: github.repository == 'intel/llvm'
-    uses: ./.github/workflows/sycl_windows_build_and_test.yml
-    with:
-      lts_matrix: ${{ needs.test_matrix.outputs.lts_wn_matrix }}
+  # windows_default:
+  #   name: Windows
+  #   needs: test_matrix
+  #   if: github.repository == 'intel/llvm'
+  #   uses: ./.github/workflows/sycl_windows_build_and_test.yml
+  #   with:
+  #     lts_matrix: ${{ needs.test_matrix.outputs.lts_wn_matrix }}
 
-  macos_default:
-    name: macOS
-    if: github.repository == 'intel/llvm'
-    uses: ./.github/workflows/sycl_macos_build_and_test.yml
+  # macos_default:
+  #   name: macOS
+  #   if: github.repository == 'intel/llvm'
+  #   uses: ./.github/workflows/sycl_macos_build_and_test.yml
