--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -35,18 +35,6 @@ on:
       artifact_archive_name:
         type: string
         default: llvm_sycl.tar.zst
-      lts_matrix:
-        type: string
-        required: false
-        default: "[]"
-      lts_aws_matrix:
-        type: string
-        required: false
-        default: "[]"
-      cts_matrix:
-        type: string
-        required: false
-        default: "[]"
       cts_cmake_extra_args:
         type: string
         required: false
@@ -66,6 +54,8 @@ on:
         description: 'Artifacts retention period'
         type: string
         default: 3
+      lts_config:
+        type: string
 
   workflow_dispatch:
     inputs:
@@ -114,9 +104,22 @@ on:
         type: choice
         options:
           - 3
+      lts_config:
+        type: choice
+        options:
+          - ''
+          - 'esimd_emu'
 
 jobs:
+  test_matrix:
+    name: Generate Test Matrix
+    uses: ./.github/workflows/sycl_gen_test_matrix.yml
+    with:
+      ref: ${{ inputs.build_ref || github.sha }}
+      lts_config: ${{ inputs.lts_config }}
+
   build:
+    needs: [test_matrix]
     name: Build + LIT
     runs-on: [Linux, build]
     container:
@@ -254,23 +257,23 @@ jobs:
 
   aws-start:
     name: Start AWS
-    needs: build
-    if: ${{ always() && !cancelled() && needs.build.outputs.build_conclusion == 'success' && inputs.lts_aws_matrix != '[]' && inputs.lts_aws_matrix != '' }}
+    needs: [test_matrix, build]
+    if: ${{ always() && !cancelled() && needs.build.outputs.build_conclusion == 'success' && needs.test_matrix.outputs.lts_aws_matrix != '[]' }}
     uses: ./.github/workflows/aws.yml
     secrets: inherit
     with:
       mode: start
-      runs-on-list: ${{ inputs.lts_aws_matrix }}
+      runs-on-list: ${{ needs.test_matrix.outputs.lts_aws_matrix }}
 
   e2e-tests:
-    needs: [build, aws-start]
+    needs: [test_matrix, build, aws-start]
     # Continue if build was successful. If aws-start is not successful all
     # AWS tasks will fail, but all non-AWS tasks should continue.
-    if: ${{ always() && needs.build.outputs.build_conclusion == 'success' && inputs.lts_matrix != '[]' && inputs.lts_matrix != '' }}
+    if: ${{ always() && needs.build.outputs.build_conclusion == 'success' && needs.test_matrix.outputs.lts_lx_matrix != '[]' }}
     strategy:
       fail-fast: false
       matrix:
-        include: ${{ fromJSON(inputs.lts_matrix) }}
+        include: ${{ fromJSON(needs.test_matrix.outputs.lts_lx_matrix) }}
     uses: ./.github/workflows/sycl_linux_run_tests.yml
     with:
       tests_selector: e2e
@@ -292,12 +295,12 @@ jobs:
       env: ${{ toJSON(matrix.env) }}
 
   khronos_sycl_cts:
-    needs: build
-    if: ${{ inputs.cts_matrix != '[]' && inputs.cts_matrix != '' && inputs.check_sycl == 'true' }}
+    needs: [test_matrix, build]
+    if: ${{ needs.test_matrix.outputs.cts_matrix != '[]' && inputs.check_sycl == 'true' }}
     strategy:
       fail-fast: false
       matrix:
-        include: ${{ fromJSON(inputs.cts_matrix) }}
+        include: ${{ fromJSON(needs.test_matrix.outputs.cts_matrix) }}
     name: ${{ matrix.name }}
     runs-on: ${{ matrix.runs-on }}
     env: ${{ matrix.env }}
@@ -342,12 +345,12 @@ jobs:
 
   aws-stop:
     name: Stop AWS
-    needs: [ aws-start, e2e-tests ]
+    needs: [ test_matrix, aws-start, e2e-tests ]
     # Always attempt to shutdown AWS instance, even if AWS start was not
     # successful.
-    if: ${{ always() && inputs.lts_aws_matrix != '[]' && inputs.lts_aws_matrix != '' }}
+    if: ${{ always() && needs.test_matrix.outputs.lts_aws_matrix != '[]' }}
     uses: ./.github/workflows/aws.yml
     secrets: inherit
     with:
       mode: stop
-      runs-on-list: ${{ inputs.lts_aws_matrix }}
+      runs-on-list: ${{ needs.test_matrix.outputs.lts_aws_matrix }}
